--- a/day0216/ex5_css.css
+++ b/day0216/ex5_css.css
@@ -1,8 +1,21 @@
+body,body *{
+    margin: 0;
+    padding: 0;
+
+}
+
+ul,i{
+    list-style: none;
+}
+
 header,section{
     display: block;
 
 }
-
+a{
+    text-decoration: none;
+    color:black;
+}
 a:hover{
     text-decoration: underline;
     color: #fff;
